fix: fix e2e errors
