# internal/entities/category.go
@@ -2,7 +2,7 @@ package entities
 
 // ProductCategory представляет собой структуру, описывающую категорию изделия.
 type ProductCategory struct {
-	ID   int    `json:"category,omitempty" info:"ID категории товара"`
+	ID   int    `json:"id,omitempty" info:"ID категории товара"`
 	Name string `json:"name" info:"Название категории товара"`
 	// Level      int    `json:"level" info:"Уровень вложенности категории товара"`
 	ParentID int `json:"parent_id,omitempty" info:"ID категории меньшего уровня"`
